--- a/components/TripSteps/create-trip.module.scss
+++ b/components/TripSteps/create-trip.module.scss
@@ -32,3 +32,7 @@
         margin-top: 2rem;
     }
 }
+
+.slickDir {
+    direction: rtl;
+}
